[package]
name = "websocket_tokio_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
futures-util = "0.3.30"
slab = "0.4.9"
tokio = { version = "1.0.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
